fix mobile pic out of bound

--- a/src/all.css
+++ b/src/all.css
@@ -931,7 +931,6 @@ input::placeholder {
     box-sizing: border-box;
   }
   .container,
-  .topic-list,
   .reserve,
   .page,
   .footer {
